// Vitest Snapshot v1

exports[`BEP131Token > should serialize and deserialize 1`] = `
Uint8Array [
  8,
  1,
  26,
  10,
  99,
  111,
  108,
  108,
  101,
  99,
  116,
  105,
  111,
  110,
  34,
  5,
  111,
  119,
  110,
  101,
  114,
]
`;

exports[`BEP131Token > should serialize and deserialize 2`] = `
{
  "collection": "collection",
  "id": 1,
  "owner": "owner",
}
`;

exports[`BEP131Token > should serialize and deserialize 3`] = `"{\\"id\\":1,\\"collection\\":\\"collection\\",\\"owner\\":\\"owner\\"}"`;

exports[`Collection > should serialize and deserialize 1`] = `
Uint8Array [
  10,
  64,
  101,
  50,
  97,
  98,
  101,
  56,
  51,
  49,
  52,
  57,
  52,
  98,
  100,
  54,
  100,
  56,
  54,
  52,
  50,
  56,
  49,
  48,
  99,
  98,
  49,
  49,
  101,
  50,
  100,
  51,
  54,
  57,
  52,
  52,
  97,
  98,
  98,
  50,
  50,
  48,
  54,
  99,
  52,
  48,
  97,
  99,
  53,
  102,
  50,
  52,
  98,
  101,
  55,
  51,
  100,
  57,
  50,
  50,
  53,
  56,
  100,
  102,
  97,
  57,
  18,
  4,
  110,
  97,
  109,
  101,
  26,
  6,
  115,
  121,
  109,
  98,
  111,
  108,
  34,
  9,
  117,
  114,
  105,
  80,
  114,
  101,
  102,
  105,
  120,
  42,
  9,
  117,
  114,
  105,
  83,
  117,
  102,
  102,
  105,
  120,
  58,
  88,
  98,
  101,
  97,
  114,
  49,
  53,
  122,
  50,
  48,
  99,
  119,
  99,
  103,
  115,
  122,
  114,
  53,
  52,
  118,
  55,
  119,
  55,
  112,
  120,
  117,
  108,
  121,
  118,
  51,
  112,
  121,
  113,
  106,
  122,
  56,
  55,
  56,
  114,
  109,
  118,
  122,
  113,
  116,
  106,
  102,
  50,
  115,
  113,
  112,
  104,
  122,
  55,
  103,
  118,
  52,
  104,
  114,
  122,
  48,
  102,
  52,
  52,
  118,
  117,
  119,
  103,
  120,
  53,
  55,
  113,
  121,
  54,
  104,
  48,
  99,
  48,
  54,
  52,
  120,
  51,
  114,
  119,
  52,
  52,
  122,
  120,
  112,
  108,
  66,
  88,
  98,
  101,
  97,
  114,
  49,
  53,
  122,
  50,
  48,
  99,
  119,
  99,
  103,
  115,
  122,
  114,
  53,
  52,
  118,
  55,
  119,
  55,
  112,
  120,
  117,
  108,
  121,
  118,
  51,
  112,
  121,
  113,
  106,
  122,
  56,
  55,
  56,
  114,
  109,
  118,
  122,
  113,
  116,
  106,
  102,
  50,
  115,
  113,
  112,
  104,
  122,
  55,
  103,
  118,
  52,
  104,
  114,
  122,
  48,
  102,
  52,
  52,
  118,
  117,
  119,
  103,
  120,
  53,
  55,
  113,
  121,
  54,
  104,
  48,
  99,
  48,
  54,
  52,
  120,
  51,
  114,
  119,
  52,
  52,
  122,
  120,
  112,
  108,
  74,
  97,
  10,
  88,
  98,
  101,
  97,
  114,
  49,
  53,
  122,
  50,
  48,
  99,
  119,
  99,
  103,
  115,
  122,
  114,
  53,
  52,
  118,
  55,
  119,
  55,
  112,
  120,
  117,
  108,
  121,
  118,
  51,
  112,
  121,
  113,
  106,
  122,
  56,
  55,
  56,
  114,
  109,
  118,
  122,
  113,
  116,
  106,
  102,
  50,
  115,
  113,
  112,
  104,
  122,
  55,
  103,
  118,
  52,
  104,
  114,
  122,
  48,
  102,
  52,
  52,
  118,
  117,
  119,
  103,
  120,
  53,
  55,
  113,
  121,
  54,
  104,
  48,
  99,
  48,
  54,
  52,
  120,
  51,
  114,
  119,
  52,
  52,
  122,
  120,
  112,
  108,
  18,
  5,
  18,
  3,
  0,
  1,
  2,
]
`;

exports[`Collection > should serialize and deserialize 2`] = `
{
  "accessControlList": {
    "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl": {
      "permissions": [
        0,
        1,
        2,
      ],
    },
  },
  "currentOwner": "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl",
  "id": "e2abe831494bd6d8642810cb11e2d36944abb2206c40ac5f24be73d92258dfa9",
  "initialOwner": "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl",
  "name": "name",
  "symbol": "symbol",
  "uriPrefix": "uriPrefix",
  "uriSuffix": "uriSuffix",
}
`;

exports[`Collection > should serialize and deserialize 3`] = `"{\\"id\\":\\"e2abe831494bd6d8642810cb11e2d36944abb2206c40ac5f24be73d92258dfa9\\",\\"name\\":\\"name\\",\\"symbol\\":\\"symbol\\",\\"uriPrefix\\":\\"uriPrefix\\",\\"uriSuffix\\":\\"uriSuffix\\",\\"initialOwner\\":\\"bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl\\",\\"currentOwner\\":\\"bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl\\",\\"accessControlList\\":{\\"bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl\\":{\\"permissions\\":[0,1,2]}}}"`;

exports[`User > should serialize and deserialize 1`] = `
Uint8Array [
  18,
  3,
  0,
  1,
  2,
]
`;

exports[`User > should serialize and deserialize 2`] = `
{
  "permissions": [
    0,
    1,
    2,
  ],
}
`;

exports[`User > should serialize and deserialize 3`] = `"{\\"permissions\\":[0,1,2]}"`;
